# Learn_wgpu

./: .prettierignore  .prettierrc  package-lock.json
beginner-1/: Cargo.toml
beginner-1/src/: lib.rs  main.rs  scalar.rs  transform.rs  utils.rs  wgpu.rs
dependency/: Cargo.toml  index.html
fundamental/: download_webgpu_lessons.js  index.html  main.js  math_utils.js  package-lock.json  package.json  shaders.wgsl
fundamental/scripts/: html-to-md.js
fundamental/webgpu-lessons-md/: webgpu-bind-group-layouts.md  webgpu-cameras.md  webgpu-compatibility-mode.md  webgpu-compute-shaders-histogram-part-2.md  webgpu-compute-shaders-histogram.md  webgpu-compute-shaders.md  webgpu-constants.md  webgpu-copying-data.md  webgpu-cube-maps.md  webgpu-debugging.md  webgpu-environment-maps.md  webgpu-from-webgl.md  webgpu-fundamentals.md  webgpu-how-it-works.md  webgpu-importing-textures.md  webgpu-inter-stage-variables.md  webgpu-large-triangle-to-cover-clip-space.md  webgpu-lighting-directional.md  webgpu-lighting-point.md  webgpu-lighting-spot.md  webgpu-limits-and-features.md  webgpu-matrix-math.md  webgpu-matrix-stacks.md  webgpu-memory-layout.md  webgpu-multiple-canvases.md  webgpu-multisampling.md  webgpu-optimization.md  webgpu-orthographic-projection.md  webgpu-perspective-projection.md  webgpu-points.md  webgpu-post-processing.md  webgpu-resizing-the-canvas.md  webgpu-rotation.md  webgpu-scale.md  webgpu-scene-graphs.md  webgpu-skybox.md  webgpu-storage-buffers.md  webgpu-storage-textures.md  webgpu-textures-external-video.md  webgpu-textures.md  (+7 more)
surface/src/: lib.rs  (+1 more)
(+12 files in other folders)
