[package]
name = "dependencies-and-window"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
log = "0.4"
wgpu = "27.0.0"
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# JavaScript 콘솔에 오류를 보내도록 panic! 매크로를 구성합니다. 이것이 없으면 공황 상태에 직면했을 때 그 원인에 대해 어둠 속에 남겨지게 됩니다.
console_error_panic_hook = "0.1.6"
# 로그API를 구현합니다.
# 모든 로그를 자바스크립트 콘솔로 보냅니다. 특정 로그 수준의 로그만 보내도록 구성할 수 있습니다. 이것은 디버깅에도 좋습니다.
console_log = "1.0"
wgpu = { version = "27.0.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
# JavaScript 응용 프로그램에서 사용할 수 있는 많은 메서드와 구조가 있는 Crate
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# 웹을 위한 지원
# 크레이트가 네이티브 Rust 정적 라이브러리(rlib)와 C/C++ 호환 라이브러리(cdylib)를 빌드할 수 있도록 허용하고 싶다는 것을 알려줍
[lib]
crate-type = ["cdylib", "rlib"]